# rdk-libusbctrl

./: CONTRIBUTING.md  configure.ac  rdk_build.sh  rdk_env.xml
include/: usbctrl.h
src/: Makefile.am  usbctrl.cpp  usbtest.cpp
